packages/dartcv/src/calib3d/calib3d.h

//  Performs camera calibration.
// double  cv::fisheye::calibrate (InputArrayOfArrays objectPoints, InputArrayOfArrays imagePoints, const Size &image_size, InputOutputArray K, InputOutputArray D, OutputArrayOfArrays rvecs, OutputArrayOfArrays tvecs, int flags=0, TermCriteria criteria=TermCriteria(TermCriteria::COUNT+TermCriteria::EPS, 100, DBL_EPSILON))
CvStatus *cv_fisheye_calibrate(
    VecMat objectPoints,
    VecMat imagePoints,
    CvSize imageSize,
    MatInOut k,
    MatInOut d,
    VecMat rvecs,
    VecMat tvecs,
    int flags,
    TermCriteria criteria,
    double *rval,
    CvCallback_0 callback
);
// Finds the positions of internal corners of the chessboard.
// bool cv::findChessboardCorners (InputArray image, Size patternSize, OutputArray corners, int flags=CALIB_CB_ADAPTIVE_THRESH+CALIB_CB_NORMALIZE_IMAGE)
CvStatus *cv_findChessboardCorners(
    Mat image, CvSize patternSize, VecPoint2f *corners, int flags, bool *rval, CvCallback_0 callback
);
// Finds the positions of internal corners of the chessboard using a sector based approach.
// bool cv::findChessboardCornersSB (InputArray image, Size patternSize, OutputArray corners, int flags, OutputArray meta)
CvStatus *cv_findChessboardCornersSB(
    Mat image, CvSize patternSize, VecPoint2f *out_corners, int flags, bool *rval, CvCallback_0 callback
);
CvStatus *cv_findChessboardCornersSB_1(
    Mat image,
    CvSize patternSize,
    VecPoint2f *out_corners,
    int flags,
    Mat meta,
    bool *rval,
    CvCallback_0 callback
);
// Finds centers in the grid of circles.
// bool cv::findCirclesGrid (InputArray image, Size patternSize, OutputArray centers, int flags, const Ptr< FeatureDetector > &blobDetector, const CirclesGridFinderParameters &parameters)
// bool cv::findCirclesGrid (InputArray image, Size patternSize, OutputArray centers, int flags=CALIB_CB_SYMMETRIC_GRID, const Ptr< FeatureDetector > &blobDetector=SimpleBlobDetector::create())
CvStatus *cv_findCirclesGrid(MatIn image, CvSize patternSize, MatOut centers, int flags, bool *rval,
                             CvCallback_0 callback);
// Calculates an essential matrix from the corresponding points in two images.
// Mat cv::findEssentialMat (InputArray points1, InputArray points2, double focal, Point2d pp, int method, double prob, double threshold, OutputArray mask)
// Mat cv::findEssentialMat (InputArray points1, InputArray points2, double focal=1.0, Point2d pp=Point2d(0, 0), int method=RANSAC, double prob=0.999, double threshold=1.0, int maxIters=1000, OutputArray mask=noArray())
CvStatus *cv_findEssentialMat(MatIn points1, MatIn points2, double focal, CvPoint2d pp, int method, double prob,
                              double threshold, int maxIters, MatOut mask, Mat *rval, CvCallback_0 callback);
// Mat cv::findEssentialMat (InputArray points1, InputArray points2, InputArray cameraMatrix, int method, double prob, double threshold, OutputArray mask)
// Mat cv::findEssentialMat (InputArray points1, InputArray points2, InputArray cameraMatrix1, InputArray cameraMatrix2, InputArray dist_coeff1, InputArray dist_coeff2, OutputArray mask, const UsacParams &params)
// Mat cv::findEssentialMat (InputArray points1, InputArray points2, InputArray cameraMatrix, int method=RANSAC, double prob=0.999, double threshold=1.0, int maxIters=1000, OutputArray mask=noArray())
CvStatus *cv_findEssentialMat_1(MatIn points1, MatIn points2, MatIn cameraMatrix, int method, double prob,
                                double threshold, int maxIters, MatOut mask, Mat *rval, CvCallback_0 callback);
// Calculates an essential matrix from the corresponding points in two images from potentially two different cameras.
// Mat cv::findEssentialMat (InputArray points1, InputArray points2, InputArray cameraMatrix1, InputArray distCoeffs1, InputArray cameraMatrix2, InputArray distCoeffs2, int method=RANSAC, double prob=0.999, double threshold=1.0, OutputArray mask=noArray())


// Calculates a fundamental matrix from the corresponding points in two images.
// Mat cv::findFundamentalMat (InputArray points1, InputArray points2, int method, double ransacReprojThreshold, double confidence, int maxIters, OutputArray mask=noArray())
// Mat cv::findFundamentalMat (InputArray points1, InputArray points2, int method=FM_RANSAC, double ransacReprojThreshold=3., double confidence=0.99, OutputArray mask=noArray())
CvStatus *cv_findFundamentalMat(
    MatIn points1,
    MatIn points2,
    int method,
    double ransacReprojThreshold,
    double confidence,
    int maxIters,
    MatOut mask,
    Mat *rval,
    CvCallback_0 callback
);
// Mat cv::findFundamentalMat (InputArray points1, InputArray points2, OutputArray mask, const UsacParams &params)
CvStatus *cv_findFundamentalMat_1(
    MatIn points1,
    MatIn points2,
    MatOut mask,
    UsacParams params,
    Mat *rval,
    CvCallback_0 callback
);
// Mat cv::findFundamentalMat (InputArray points1, InputArray points2, OutputArray mask, int method=FM_RANSAC, double ransacReprojThreshold=3., double confidence=0.99)
CvStatus *cv_findFundamentalMat_2(
    MatIn points1,
    MatIn points2,
    MatOut mask,
    int method,
    double ransacReprojThreshold,
    double confidence,
    Mat *rval,
    CvCallback_0 callback
);
// Finds a perspective transformation between two planes.
// Mat cv::findHomography (InputArray srcPoints, InputArray dstPoints, int method=0, double ransacReprojThreshold=3, OutputArray mask=noArray(), const int maxIters=2000, const double confidence=0.995)
CvStatus *cv_findHomography(
    Mat src,
    Mat dst,
    int method,
    double ransacReprojThreshold,
    MatOut mask,
    int maxIters,
    double confidence,
    Mat *rval,
    CvCallback_0 callback
);
// Mat cv::findHomography (InputArray srcPoints, InputArray dstPoints, OutputArray mask, int method=0, double ransacReprojThreshold=3)
// Mat cv::findHomography (InputArray srcPoints, InputArray dstPoints, OutputArray mask, const UsacParams &params)
CvStatus *cv_findHomography_1(MatIn srcPoints, MatIn dstPoints, MatOut mask, UsacParams params, Mat *rval,
                              CvCallback_0 callback);