packages/dartcv/lib/src/g/calib3d.g.dart


  late final _cv_findChessboardCornersPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              CvSize,
              ffi.Pointer<VecPoint2f>,
              ffi.Int,
              ffi.Pointer<ffi.Bool>,
              imp1.CvCallback_0)>>('cv_findChessboardCorners');
  late final _cv_findChessboardCorners =
      _cv_findChessboardCornersPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvSize, ffi.Pointer<VecPoint2f>,
              int, ffi.Pointer<ffi.Bool>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_findChessboardCornersSB(
    Mat image,
    CvSize patternSize,
    ffi.Pointer<VecPoint2f> out_corners,
    int flags,
    ffi.Pointer<ffi.Bool> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_findChessboardCornersSB(
      image,
      patternSize,
      out_corners,
      flags,
      rval,
      callback,
    );
  }

  late final _cv_findChessboardCornersSBPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              CvSize,
              ffi.Pointer<VecPoint2f>,
              ffi.Int,
              ffi.Pointer<ffi.Bool>,
              imp1.CvCallback_0)>>('cv_findChessboardCornersSB');
  late final _cv_findChessboardCornersSB =
      _cv_findChessboardCornersSBPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvSize, ffi.Pointer<VecPoint2f>,
              int, ffi.Pointer<ffi.Bool>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_findChessboardCornersSB_1(
    Mat image,
    CvSize patternSize,
    ffi.Pointer<VecPoint2f> out_corners,
    int flags,
    Mat meta,
    ffi.Pointer<ffi.Bool> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_findChessboardCornersSB_1(
      image,
      patternSize,
      out_corners,
      flags,
      meta,
      rval,
      callback,
    );
  }

  late final _cv_findChessboardCornersSB_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              CvSize,
              ffi.Pointer<VecPoint2f>,
              ffi.Int,
              Mat,
              ffi.Pointer<ffi.Bool>,
              imp1.CvCallback_0)>>('cv_findChessboardCornersSB_1');
  late final _cv_findChessboardCornersSB_1 =
      _cv_findChessboardCornersSB_1Ptr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvSize, ffi.Pointer<VecPoint2f>,
              int, Mat, ffi.Pointer<ffi.Bool>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_findCirclesGrid(
    imp1.MatIn image,
    CvSize patternSize,
    imp1.MatOut centers,
    int flags,
    ffi.Pointer<ffi.Bool> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_findCirclesGrid(
      image,
      patternSize,
      centers,
      flags,
      rval,
      callback,
    );
  }

  late final _cv_findCirclesGridPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              CvSize,
              imp1.MatOut,
              ffi.Int,
              ffi.Pointer<ffi.Bool>,
              imp1.CvCallback_0)>>('cv_findCirclesGrid');
  late final _cv_findCirclesGrid = _cv_findCirclesGridPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.MatIn, CvSize, imp1.MatOut, int,
          ffi.Pointer<ffi.Bool>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_findEssentialMat(
    imp1.MatIn points1,
    imp1.MatIn points2,
    double focal,
    CvPoint2d pp,
    int method,
    double prob,
    double threshold,
    int maxIters,
    imp1.MatOut mask,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_findEssentialMat(
      points1,
      points2,
      focal,
      pp,
      method,
      prob,
      threshold,
      maxIters,
      mask,
      rval,
      callback,
    );
  }

  late final _cv_findEssentialMatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              ffi.Double,
              CvPoint2d,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              imp1.MatOut,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_findEssentialMat');
  late final _cv_findEssentialMat = _cv_findEssentialMatPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          double,
          CvPoint2d,
          int,
          double,
          double,
          int,
          imp1.MatOut,
          ffi.Pointer<Mat>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_findEssentialMat_1(
    imp1.MatIn points1,
    imp1.MatIn points2,
    imp1.MatIn cameraMatrix,
    int method,
    double prob,
    double threshold,
    int maxIters,
    imp1.MatOut mask,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_findEssentialMat_1(
      points1,
      points2,
      cameraMatrix,
      method,
      prob,
      threshold,
      maxIters,
      mask,
      rval,
      callback,
    );
  }

  late final _cv_findEssentialMat_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              imp1.MatOut,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_findEssentialMat_1');
  late final _cv_findEssentialMat_1 = _cv_findEssentialMat_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          int,
          double,
          double,
          int,
          imp1.MatOut,
          ffi.Pointer<Mat>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_findFundamentalMat(
    imp1.MatIn points1,
    imp1.MatIn points2,
    int method,
    double ransacReprojThreshold,
    double confidence,
    int maxIters,
    imp1.MatOut mask,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_findFundamentalMat(
      points1,
      points2,
      method,
      ransacReprojThreshold,
      confidence,
      maxIters,
      mask,
      rval,
      callback,
    );
  }

  late final _cv_findFundamentalMatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              imp1.MatOut,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_findFundamentalMat');
  late final _cv_findFundamentalMat = _cv_findFundamentalMatPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatIn, int, double,
          double, int, imp1.MatOut, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_findFundamentalMat_1(
    imp1.MatIn points1,
    imp1.MatIn points2,
    imp1.MatOut mask,
    UsacParams params,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_findFundamentalMat_1(
      points1,
      points2,
      mask,
      params,
      rval,
      callback,
    );
  }

  late final _cv_findFundamentalMat_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              UsacParams,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_findFundamentalMat_1');
  late final _cv_findFundamentalMat_1 = _cv_findFundamentalMat_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatIn, imp1.MatOut,
          UsacParams, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_findFundamentalMat_2(
    imp1.MatIn points1,
    imp1.MatIn points2,
    imp1.MatOut mask,
    int method,
    double ransacReprojThreshold,
    double confidence,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_findFundamentalMat_2(
      points1,
      points2,
      mask,
      method,
      ransacReprojThreshold,
      confidence,
      rval,
      callback,
    );
  }

  late final _cv_findFundamentalMat_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_findFundamentalMat_2');
  late final _cv_findFundamentalMat_2 = _cv_findFundamentalMat_2Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatIn, imp1.MatOut, int,
          double, double, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_findHomography(
    Mat src,
    Mat dst,
    int method,
    double ransacReprojThreshold,
    imp1.MatOut mask,
    int maxIters,
    double confidence,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_findHomography(
      src,
      dst,
      method,
      ransacReprojThreshold,
      mask,
      maxIters,
      confidence,
      rval,
      callback,
    );
  }

  late final _cv_findHomographyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              ffi.Int,
              ffi.Double,
              imp1.MatOut,
              ffi.Int,
              ffi.Double,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_findHomography');
  late final _cv_findHomography = _cv_findHomographyPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, double, imp1.MatOut, int,
          double, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_findHomography_1(
    imp1.MatIn srcPoints,
    imp1.MatIn dstPoints,
    imp1.MatOut mask,
    UsacParams params,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_findHomography_1(
      srcPoints,
      dstPoints,
      mask,
      params,
      rval,
      callback,
    );
  }

  late final _cv_findHomography_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              UsacParams,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_findHomography_1');
  late final _cv_findHomography_1 = _cv_findHomography_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatIn, imp1.MatOut,
          UsacParams, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_fisheye_calibrate(
    VecMat objectPoints,
    VecMat imagePoints,
    CvSize imageSize,
    imp1.MatInOut k,
    imp1.MatInOut d,
    VecMat rvecs,
    VecMat tvecs,
    int flags,
    TermCriteria criteria,
    ffi.Pointer<ffi.Double> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_fisheye_calibrate(
      objectPoints,
      imagePoints,
      imageSize,
      k,
      d,
      rvecs,
      tvecs,
      flags,
      criteria,
      rval,
      callback,
    );
  }

  late final _cv_fisheye_calibratePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecMat,
              VecMat,
              CvSize,
              imp1.MatInOut,
              imp1.MatInOut,
              VecMat,
              VecMat,
              ffi.Int,
              TermCriteria,
              ffi.Pointer<ffi.Double>,
              imp1.CvCallback_0)>>('cv_fisheye_calibrate');
  late final _cv_fisheye_calibrate = _cv_fisheye_calibratePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecMat,
          VecMat,
          CvSize,
          imp1.MatInOut,
          imp1.MatInOut,
          VecMat,
          VecMat,
          int,
          TermCriteria,
          ffi.Pointer<ffi.Double>,
          imp1.CvCallback_0)>();
